# frappe-sales-engagement-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: crm-boundary.md  desk-navigation-safety.md  frappe-crm-baseline.md  milestone-1-acceptance.md  milestone-2-data-model.md  milestone-8-validation-and-closeout.md  site-environment-baseline.md
docs/api/: README.md  (+9 more)
sales_engagement_intelligence/: hooks.py  install.py  modules.txt  patches.txt  uninstall.py
tests/: test_contact_population.py  test_contact_role_normalization.py  test_contact_role_seed_hygiene.py  test_contact_role_semantic_dedup.py  test_crm_activity_cache_invalidation.py  test_crm_contact_child_table_update.py  test_crm_metadata_copy.py  test_delete_unlinking_static.py  test_grid_done_footer.py  test_lifecycle_rules.py  test_managed_child_grid_behavior.py  test_message_draft_cc_validation.py  test_message_draft_copy_to_header.py  test_message_draft_recipient_canonicalization.py  test_message_draft_recipient_crm_lead.py  test_message_draft_recipient_restore.py  test_message_draft_sent_schema.py  test_message_draft_unsent.py  test_milestone_8_static.py  test_no_singular_prospect_crm_lead_references.py  test_notification_surfaces.py  test_playbook_form_layout.py  test_playbook_form_tabs.py  test_playbook_seed_safety.py  test_playbook_signal_rules.py  test_playbook_workspace_ownership.py  test_post_qualification_workflow_static.py  test_prospect_action_audit.py  test_prospect_actions_menu.py  test_prospect_contact_grid.py  test_prospect_contact_role_placeholders.py  test_prospect_contact_role_sync.py  (+20 more)
(+322 files in other folders)
