[project]
name = "sales_engagement_intelligence"
description = "Sales engagement and outreach intelligence layer for ERPNext CRM"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sales Engagement and Intelligence contributors" }
]
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
